[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiopyproxy"
version = "0.0.1"
description = "A simple HTTP proxy in pure Python"
authors = ["Ashley Scopes"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
click = "^8.1.3"
colorlog = "^6.7.0"
uvloop = "^0.16"

# Packages that will speed up aiohttp by being present. Not used directly.
aiodns = "^3.0.0"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
nox = "2022.8.7"
nox-poetry = "1.0.1"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
ignore = [
    "E501",    # Ignore line length, we handle this using black instead.
]

[tool.isort]
line_length = 88

[tool.pyright]
src_paths = ["aiopyproxy"]
